누적합 & 구현 - 1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,6 +84,9 @@
         "valarray": "cpp",
         "variant": "cpp",
         "vector": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "__undef_macros": "cpp",
+        "functional": "cpp",
+        "memory_resource": "cpp"
     }
 }
